# MongoGuard

./: LICENSE  README.md  pyproject.toml  test.py
MongoGuard/: __init__.py  mongoguard.py
mongoguard/: log_manager.py  mongoguard.py
mongoguard.egg-info/: PKG-INFO
